// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`corpus: TC3_PlcSample_BasicPlcElements Drives/ITF.itf matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 3,
  "units": [
    {
      "extends": undefined,
      "kind": "interface",
      "methodCount": 0,
      "name": "ITF",
      "propertyCount": 0,
    },
    {
      "abstract": false,
      "access": undefined,
      "final": false,
      "hasReturnType": true,
      "kind": "method",
      "name": "METH",
      "override": false,
      "varSections": [
        {
          "declCount": 0,
          "kind": "var_section",
        },
      ],
    },
    {
      "access": undefined,
      "hasGetter": true,
      "hasSetter": true,
      "kind": "property",
      "name": "Prop",
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements Drives/ITF.itf produces document symbols matching snapshot 1`] = `
[
  {
    "children": [],
    "kind": 11,
    "name": "ITF",
  },
  {
    "children": [],
    "kind": 6,
    "name": "METH",
  },
  {
    "kind": 7,
    "name": "Prop",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements DUTs/E_StateMachine.dut matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "dutKind": "enum",
      "kind": "type_decl",
      "name": "E_StateMachine",
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements DUTs/E_StateMachine.dut produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 22,
        "name": "GoToNextState_viaTimer1",
      },
      {
        "kind": 22,
        "name": "GoToNextState_viaRisingEdge",
      },
      {
        "kind": 22,
        "name": "GoToNextState_viaTimer2",
      },
    ],
    "detail": "ENUM",
    "kind": 10,
    "name": "E_StateMachine",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements DUTs/ST_Sample.dut matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "dutKind": "struct",
      "kind": "type_decl",
      "name": "ST_Sample",
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements DUTs/ST_Sample.dut produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 8,
        "name": "bVar",
      },
      {
        "kind": 8,
        "name": "sVar",
      },
    ],
    "detail": "STRUCT",
    "kind": 23,
    "name": "ST_Sample",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements GVLs/GVL_Basic.gvl matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "kind": "global_var_list",
      "name": undefined,
      "varSections": [
        {
          "declCount": 1,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements GVLs/GVL_Basic.gvl produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "cSumComparisonLimit",
      },
    ],
    "kind": 3,
    "name": "VAR_GLOBAL",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/FB_Sample.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "abstract": false,
      "extends": undefined,
      "final": false,
      "implements": undefined,
      "kind": "function_block",
      "name": "FB_Sample",
      "varSections": [
        {
          "declCount": 2,
          "kind": "var_section",
        },
        {
          "declCount": 1,
          "kind": "var_section",
        },
        {
          "declCount": 3,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/FB_Sample.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "bEnable",
      },
      {
        "kind": 13,
        "name": "fParameter",
      },
      {
        "kind": 13,
        "name": "sOutput",
      },
      {
        "kind": 13,
        "name": "nCycleCounter",
      },
      {
        "kind": 13,
        "name": "fDivision",
      },
      {
        "kind": 13,
        "name": "stSample",
      },
    ],
    "detail": undefined,
    "kind": 5,
    "name": "FB_Sample",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/FB_StateMachine.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 2,
  "units": [
    {
      "abstract": false,
      "extends": undefined,
      "final": false,
      "implements": undefined,
      "kind": "function_block",
      "name": "FB_StateMachine",
      "varSections": [
        {
          "declCount": 9,
          "kind": "var_section",
        },
      ],
    },
    {
      "abstract": false,
      "access": undefined,
      "final": false,
      "hasReturnType": false,
      "kind": "method",
      "name": "Execute",
      "override": false,
      "varSections": [
        {
          "declCount": 0,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/FB_StateMachine.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "eStateMachine",
      },
      {
        "kind": 13,
        "name": "nCounterState1",
      },
      {
        "kind": 13,
        "name": "nCounterState2",
      },
      {
        "kind": 13,
        "name": "nCounterState3",
      },
      {
        "kind": 13,
        "name": "fbTimer",
      },
      {
        "kind": 13,
        "name": "tGoToNextState1",
      },
      {
        "kind": 13,
        "name": "tGoToNextState2",
      },
      {
        "kind": 13,
        "name": "fbTrigger",
      },
      {
        "kind": 13,
        "name": "bGoToNextState",
      },
    ],
    "detail": undefined,
    "kind": 5,
    "name": "FB_StateMachine",
  },
  {
    "children": [],
    "kind": 6,
    "name": "Execute",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/MAIN.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "kind": "program",
      "name": "MAIN",
      "varSections": [
        {
          "declCount": 9,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements POUs/MAIN.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "fbSample1",
      },
      {
        "kind": 13,
        "name": "bEnable1",
      },
      {
        "kind": 13,
        "name": "fParameter1",
      },
      {
        "kind": 13,
        "name": "sReturn1",
      },
      {
        "kind": 13,
        "name": "fbSample2",
      },
      {
        "kind": 13,
        "name": "bEnable2",
      },
      {
        "kind": 13,
        "name": "fParameter2",
      },
      {
        "kind": 13,
        "name": "sReturn2",
      },
      {
        "kind": 13,
        "name": "fbStateMachine",
      },
    ],
    "kind": 2,
    "name": "MAIN",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "kind": "program",
      "name": "SumComparison",
      "varSections": [
        {
          "declCount": 12,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "nParam1_FBD",
      },
      {
        "kind": 13,
        "name": "nParam2_FBD",
      },
      {
        "kind": 13,
        "name": "bSumGreaterThanConstant_FBD",
      },
      {
        "kind": 13,
        "name": "nParam1_FBD_short",
      },
      {
        "kind": 13,
        "name": "nParam2_FBD_short",
      },
      {
        "kind": 13,
        "name": "bSumGreaterThanConstant_FBD_short",
      },
      {
        "kind": 13,
        "name": "nParam1_ST",
      },
      {
        "kind": 13,
        "name": "nParam2_ST",
      },
      {
        "kind": 13,
        "name": "bSumGreaterThanConstant_ST",
      },
      {
        "kind": 13,
        "name": "nParam1_ST_short",
      },
      {
        "kind": 13,
        "name": "nParam2_ST_short",
      },
      {
        "kind": 13,
        "name": "bSumGreaterThanConstant_ST_short",
      },
    ],
    "kind": 2,
    "name": "SumComparison",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_FBD_short.fbd matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "hasReturnType": true,
      "kind": "function",
      "name": "F_SumComparison_FBD_short",
      "varSections": [
        {
          "declCount": 2,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_FBD_short.fbd produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "nInput1",
      },
      {
        "kind": 13,
        "name": "nInput2",
      },
    ],
    "kind": 12,
    "name": "F_SumComparison_FBD_short",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_FBD.fbd matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "hasReturnType": true,
      "kind": "function",
      "name": "F_SumComparison_FBD",
      "varSections": [
        {
          "declCount": 2,
          "kind": "var_section",
        },
        {
          "declCount": 1,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_FBD.fbd produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "nInput1",
      },
      {
        "kind": 13,
        "name": "nInput2",
      },
      {
        "kind": 13,
        "name": "nSum",
      },
    ],
    "kind": 12,
    "name": "F_SumComparison_FBD",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_ST_short.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "hasReturnType": true,
      "kind": "function",
      "name": "F_SumComparison_ST_short",
      "varSections": [
        {
          "declCount": 2,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_ST_short.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "nInput1",
      },
      {
        "kind": 13,
        "name": "nInput2",
      },
    ],
    "kind": 12,
    "name": "F_SumComparison_ST_short",
  },
]
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_ST.st matches its structural snapshot 1`] = `
{
  "errors": [],
  "unitCount": 1,
  "units": [
    {
      "hasReturnType": true,
      "kind": "function",
      "name": "F_SumComparison_ST",
      "varSections": [
        {
          "declCount": 2,
          "kind": "var_section",
        },
        {
          "declCount": 1,
          "kind": "var_section",
        },
      ],
    },
  ],
}
`;

exports[`corpus: TC3_PlcSample_BasicPlcElements SumComparison/F_SumComparison_ST.st produces document symbols matching snapshot 1`] = `
[
  {
    "children": [
      {
        "kind": 13,
        "name": "nInput1",
      },
      {
        "kind": 13,
        "name": "nInput2",
      },
      {
        "kind": 13,
        "name": "nSum",
      },
    ],
    "kind": 12,
    "name": "F_SumComparison_ST",
  },
]
`;
